fix: The Text in Search Box is Hard to Read #12

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body[theme-mode='light'] [class^='ant'] {
   --ant-color-bg-container: var(--aero-background-1);
   --ant-segmented-item-selected-bg: var(--aero-background-3);
   --ant-button-default-bg: var(--aero-background-1);
+  --ant-radio-button-bg: var(--aero-background-1);
 }
 
 /* reset ant design variables */
@@ -60,6 +61,7 @@ body[theme-mode='dark'] [class^='ant'] {
   --ant-color-bg-container: var(--fill-1);
   --ant-segmented-item-selected-bg: var(--fill-3);
   --ant-button-default-bg: var(--fill-1);
+  --ant-radio-button-bg: var(--fill-1);
 }
 
 /* Fix new window background issue to adapt to new UI */
@@ -192,6 +194,9 @@ body[theme-mode='dark'][os='windows'] {
 /* https://github.com/hakadao/CherryStudio-Aero/issues/10 */
 /* The drawer title content is hard to read when open the mini app */
 #root[style*='background: var(--color-background)'],
-.ant-drawer-content[style*='background-color: var(--color-background)'] {
+.ant-drawer-content[style*='background-color: var(--color-background)'],
+/* https://github.com/hakadao/CherryStudio-Aero/issues/12 */
+/* Search bar background is too transparent */
+[class^='SearchBarContainer'] {
   background: var(--aero-background-solid) !important;
 }
